feat(microbiology): align order and culture workbench workflows (OGC-782)